--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
   <meta name="author" content="Ross McMurray">
   <meta name="description" content="I set up Learning@Rachel’s because I love teaching. I believe that your child has the potential to learn and enjoy learning.">
   <meta name="keywords" content="Learning, Learning@Rachels, teaching, tutoring, tutor, home tutoring, lessons">
-
   <!-- favicons -->
   <link rel="icon" type="image/png" sizes="16x16" href="./favicon.ico">
   <link rel="manifest" href="./site.webmanifest">
@@ -50,7 +49,7 @@
         <div class="c-banner-title">
             <h3>Welcome to Learning<span class="at">@</span>Rachels</h3>
             <h1>Where your child can enjoy learning</h1>
-            <a href="#packages"><button class="btn">See Programmes</button></a>
+            <a href="#programmes"><button class="btn">See Programmes</button></a>
         </div>
         <div class="scroll-down"></div>
     </div>
@@ -275,7 +274,7 @@
           <p>Need to get in contact? Please fill the form in below.</p>
       </div>
 
-      <form class="contact-form" action="mailto:r.mcmurray1@hotmail.co.uk" method="post" enctype="text/plain" onsubmit="return formValidation(event)">
+      <form id="contact-form" class="contact-form" method="POST" enctype="text/plain" onsubmit="return formValidation(event)">
           <div class="form-success-message">
               <svg aria-hidden="true" focusable="false" data-prefix="far" data-icon="check-circle" class="svg-inline--fa fa-check-circle fa-w-16" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path d="M256 8C119.033 8 8 119.033 8 256s111.033 248 248 248 248-111.033 248-248S392.967 8 256 8zm0 48c110.532 0 200 89.451 200 200 0 110.532-89.451 200-200 200-110.532 0-200-89.451-200-200 0-110.532 89.451-200 200-200m140.204 130.267l-22.536-22.718c-4.667-4.705-12.265-4.736-16.97-.068L215.346 303.697l-59.792-60.277c-4.667-4.705-12.265-4.736-16.97-.069l-22.719 22.536c-4.705 4.667-4.736 12.265-.068 16.971l90.781 91.516c4.667 4.705 12.265 4.736 16.97.068l172.589-171.204c4.704-4.668 4.734-12.266.067-16.971z"></path></svg>
               <p>Thank you for your message. I will get back to you as soon as possible.</p>
@@ -284,7 +283,7 @@
               <div class="c-personal">
                   <div class="form-field nameFormfield">
                       <label for="name">Your Name*</label>
-                      <input type="text" id="name" />
+                      <input type="text" id="name" name="_replyto" />
                   </div>
 
                   <div class="form-field emailFormfield">
@@ -292,7 +291,7 @@
                       <input type="email" id="email" />
                   </div>
 
-                  <div class="form-field">
+                  <div class="form-field phoneFormfield">
                       <label for="phone">Phone Number</label>
                       <input type="number" id="phone"/>
                   </div>
@@ -304,7 +303,8 @@
                   </div>
               </div>
           </div>
-          
+          <input type="hidden" name="_subject" value="Learning@Rachels - Form Submission" />
+          <input type="text" name="_gotcha" style="display:none" />
           <div class="contact-form_handler">
               <button class="btn btn-submit" type="submit">Submit</button>
           </div>
@@ -335,6 +335,8 @@
   <!-- end of footer -->
     
 </div><!--container end-->
+<!-- JQuery -->
+<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 <!--Main JS-->
 <script src="./js/main.js"></script>
 <!-- google -->
