General styling fixes

--- a/index.html
+++ b/index.html
@@ -130,17 +130,17 @@
         <div class="room-title">
         <h1>Gallery</h1>
             <div class="divider"></div>
+        </div>
         <div class="room-body">
-          <div class="item a"></div>
-              <div class="item b"></div>
-              <div class="item c"></div>
-              <div class="item d"></div>
-              <div class="item e"></div>
-              <div class="item f"></div>
-          </div>
+          <a href="./images/room/1.jpg"><div class="item a"></div></a>
+          <a href="./images/room/2.jpg"><div class="item b"></div></a>
+          <a href="./images/room/3.jpg"><div class="item c"></div></a>
+          <a href="./images/room/4.jpg"><div class="item d"></div></a>
+          <a href="./images/room/5.jpg"><div class="item e"></div></a>
+          <a href="./images/room/6.jpg"><div class="item f"></div></a>
+        </div>
           <a href="gallery.html"><button class="btn">View More</button></a>
       </div><!--room ending-->
-    </div>
     
     <div class="price-container">
       <div class="background" id="pricing">
@@ -339,6 +339,7 @@
 <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 <!--Main JS-->
 <script src="./js/main.js"></script>
+<script src="./js/magnific.js"></script>
 <!-- google -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-129677859-1"></script>
 <script>
