--- a/gallery.html
+++ b/gallery.html
@@ -24,13 +24,13 @@
         </div>
         <div class="c-header_links">
             <ul>
-                <a href="#l-container"><li class="nav-link">Home</li></a>
-                <a href="#programmes"><li class="nav-link">Programmes</li></a>
-                <a href="#gallery"><li class="nav-link">Gallery</li></a>
-                <a href="#pricing"><li class="nav-link">Pricing</li></a>
-                <a href="#reviews"><li class="nav-link">Reviews</li></a>
-                <a href="#welcome"><li class="nav-link">About</li></a>
-                <a href="#contact"><li class="nav-link">Contact</li></a>
+                <a href="index.html#l-container"><li class="nav-link">Home</li></a>
+                <a href="index.html#programmes"><li class="nav-link">Programmes</li></a>
+                <a href="index.html#gallery"><li class="nav-link">Gallery</li></a>
+                <a href="index.html#pricing"><li class="nav-link">Pricing</li></a>
+                <a href="index.html#reviews"><li class="nav-link">Reviews</li></a>
+                <a href="index.html#welcome"><li class="nav-link">About</li></a>
+                <a href="index.html#contact"><li class="nav-link">Contact</li></a>
             </ul>
             <div class="c-header_social">
                 <a href="https://www.facebook.com/LearningatRachels"><svg aria-hidden="true" focusable="false" data-prefix="fab" data-icon="facebook" class="svg-inline--fa fa-facebook fa-w-16" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path  d="M504 256C504 119 393 8 256 8S8 119 8 256c0 123.78 90.69 226.38 209.25 245V327.69h-63V256h63v-54.64c0-62.15 37-96.48 93.67-96.48 27.14 0 55.52 4.84 55.52 4.84v61h-31.28c-30.8 0-40.41 19.12-40.41 38.73V256h68.78l-11 71.69h-57.78V501C413.31 482.38 504 379.78 504 256z"></path></svg></a>
@@ -121,13 +121,13 @@
     </div>
     <div class="c-footer_links">
         <ul>
-          <a href="#l-container"><li class="nav-link">Home</li></a>
-          <a href="#programmes"><li class="nav-link">Programmes</li></a>
-          <a href="#gallery"><li class="nav-link">Gallery</li></a>
-          <a href="#pricing"><li class="nav-link">Pricing</li></a>
-          <a href="#reviews"><li class="nav-link">Reviews</li></a>
-          <a href="#welcome"><li class="nav-link">About</li></a>
-          <a href="#contact"><li class="nav-link">Contact</li></a>
+          <a href="index.html#l-container"><li class="nav-link">Home</li></a>
+          <a href="index.html#programmes"><li class="nav-link">Programmes</li></a>
+          <a href="index.html#gallery"><li class="nav-link">Gallery</li></a>
+          <a href="index.html#pricing"><li class="nav-link">Pricing</li></a>
+          <a href="index.html#reviews"><li class="nav-link">Reviews</li></a>
+          <a href="index.html#welcome"><li class="nav-link">About</li></a>
+          <a href="index.html#contact"><li class="nav-link">Contact</li></a>
         </ul>
     </div>
     <div class="c-footer_social">
