General styling chnages/new favicon

--- a/gallery.html
+++ b/gallery.html
@@ -19,14 +19,17 @@
 <body>
   <div class="c-gallery">
       <nav class="c-header" id="c-header">
-        <div class="c-header_logo">
+        <a href="index.html">
+          <div class="c-header_logo">
+            <img src="./images/books.svg"/>
             <h1>Learning<span class="at">@</span>Rachels</h1>
-        </div>
+          </div>
+        </a>
         <div class="c-header_links">
             <ul>
                 <a href="index.html#l-container"><li class="nav-link">Home</li></a>
                 <a href="index.html#programmes"><li class="nav-link">Programmes</li></a>
-                <a href="index.html#gallery"><li class="nav-link">Gallery</li></a>
+                <a href="gallery.html"><li class="nav-link">Gallery</li></a>
                 <a href="index.html#pricing"><li class="nav-link">Pricing</li></a>
                 <a href="index.html#reviews"><li class="nav-link">Reviews</li></a>
                 <a href="index.html#welcome"><li class="nav-link">About</li></a>
@@ -123,7 +126,7 @@
         <ul>
           <a href="index.html#l-container"><li class="nav-link">Home</li></a>
           <a href="index.html#programmes"><li class="nav-link">Programmes</li></a>
-          <a href="index.html#gallery"><li class="nav-link">Gallery</li></a>
+          <a href="gallery.html"><li class="nav-link">Gallery</li></a>
           <a href="index.html#pricing"><li class="nav-link">Pricing</li></a>
           <a href="index.html#reviews"><li class="nav-link">Reviews</li></a>
           <a href="index.html#welcome"><li class="nav-link">About</li></a>
