--- a/index.html
+++ b/index.html
@@ -19,14 +19,17 @@
 <body>
   <div class="l-container" id="l-container">
     <nav class="c-header" id="c-header">
+      <a href="index.html">
         <div class="c-header_logo">
+            <img src="./images/books.svg"/>
             <h1>Learning<span class="at">@</span>Rachels</h1>
         </div>
+      </a>
         <div class="c-header_links">
             <ul>
                 <a href="#l-container"><li class="nav-link">Home</li></a>
                 <a href="#programmes"><li class="nav-link">Programmes</li></a>
-                <a href="#gallery"><li class="nav-link">Gallery</li></a>
+                <a href="gallery.html"><li class="nav-link">Gallery</li></a>
                 <a href="#pricing"><li class="nav-link">Pricing</li></a>
                 <a href="#reviews"><li class="nav-link">Reviews</li></a>
                 <a href="#welcome"><li class="nav-link">About</li></a>
@@ -321,7 +324,7 @@
           <ul>
             <a href="#l-container"><li class="nav-link">Home</li></a>
             <a href="#programmes"><li class="nav-link">Programmes</li></a>
-            <a href="#gallery"><li class="nav-link">Gallery</li></a>
+            <a href="gallery.html"><li class="nav-link">Gallery</li></a>
             <a href="#pricing"><li class="nav-link">Pricing</li></a>
             <a href="#reviews"><li class="nav-link">Reviews</li></a>
             <a href="#welcome"><li class="nav-link">About</li></a>
