--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <!--font awesome-->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
   <!-- meta -->
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" scale=1.0, user-scalable=no">
   <meta charset="utf-8">
   <meta name="author" content="Ross McMurray">
   <meta name="description" content="I set up Learning@Rachel’s because I love teaching. I believe that your child has the potential to learn and enjoy learning.">
