--- a/gallery.html
+++ b/gallery.html
@@ -3,18 +3,15 @@
 <title>Learning@Rachels - Gallery</title>
 <!--main css-->
 <link rel="stylesheet" href="styles/css/main.css" type="text/css"/>
-<!--font awesome-->
-<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 <!-- meta -->
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta charset="utf-8">
 <meta name="author" content="Ross McMurray">
 <meta name="description" content="I set up Learning@Rachel’s because I love teaching. I believe that your child has the potential to learn and enjoy learning.">
-<meta name="keywords" content="Learning, Learning@Rachels, teaching, tutoring, tutor, home tutoring, lessons">
+<meta name="keywords" content="Learning, Learning@Rachels, teaching, tutoring, tutor, home tutoring, lessons, learning@rachel">
 <!-- favicons -->
 <link rel="icon" type="image/png" sizes="16x16" href="./favicon.ico">
 <link rel="manifest" href="./site.webmanifest">
-<link rel="mask-icon" href="./safari-pinned-tab.svg" color="#df8b0d">
 </head>
 <body>
   <div class="c-gallery">
@@ -22,7 +19,7 @@
         <a href="index.html">
           <div class="c-header_logo">
             <img src="./images/books.svg"/>
-            <h1>Learning<span class="at">@</span>Rachels</h1>
+            <h1>Learning<span class="at">@</span>Rachel's</h1>
           </div>
         </a>
         <div class="c-header_links">
@@ -120,7 +117,7 @@
   <!-- start of footer -->
   <footer>
     <div class="c-footer-logo">
-        <h3>Learning<span class="at">@</span>Rachels</h3>
+        <h3>Learning<span class="at">@</span>Rachel's</h3>
     </div>
     <div class="c-footer_links">
         <ul>
