--- a/index.html
+++ b/index.html
@@ -1,20 +1,17 @@
 <html>
 <head>
-  <title>Learning@Rachels - Where your child can enjoy learning</title>
+  <title>Learning@Rachel's - Where your child can enjoy learning</title>
   <!--main css-->
   <link rel="stylesheet" href="styles/css/main.css" type="text/css"/>
-  <!--font awesome-->
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
   <!-- meta -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0" scale=1.0, user-scalable=no">
   <meta charset="utf-8">
   <meta name="author" content="Ross McMurray">
   <meta name="description" content="I set up Learning@Rachel’s because I love teaching. I believe that your child has the potential to learn and enjoy learning.">
-  <meta name="keywords" content="Learning, Learning@Rachels, teaching, tutoring, tutor, home tutoring, lessons">
+  <meta name="keywords" content="Learning, Learning@Rachels, teaching, tutoring, tutor, home tutoring, lessons, learning@rachel">
   <!-- favicons -->
   <link rel="icon" type="image/png" sizes="16x16" href="./favicon.ico">
   <link rel="manifest" href="./site.webmanifest">
-  <link rel="mask-icon" href="./safari-pinned-tab.svg" color="#df8b0d">
 </head>
 <body>
   <div class="l-container" id="l-container">
@@ -22,7 +19,7 @@
       <a href="index.html">
         <div class="c-header_logo">
             <img src="./images/books.svg"/>
-            <h1>Learning<span class="at">@</span>Rachels</h1>
+            <h1>Learning<span class="at">@</span>Rachel's</h1>
         </div>
       </a>
         <div class="c-header_links">
@@ -50,7 +47,7 @@
     <!-- start of banner -->
     <div class="c-banner">
         <div class="c-banner-title">
-            <h2>Welcome to Learning<span class="at">@</span>Rachels</h2>
+            <h2>Welcome to Learning<span class="at">@</span>Rachel's</h2>
             <h1>Where your child can enjoy learning</h1>
             <a href="#programmes"><button class="btn">See Programmes</button></a>
         </div>
@@ -318,7 +315,7 @@
     <!-- start of footer -->
     <footer>
       <div class="c-footer-logo">
-          <h3>Learning<span class="at">@</span>Rachels</h3>
+          <h3>Learning<span class="at">@</span>Rachel's</h3>
       </div>
       <div class="c-footer_links">
           <ul>
@@ -349,7 +346,6 @@
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
-
   gtag('config', 'UA-129677859-1');
 </script>
 </body>
